[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/maincontrol.gd" type="Script" id=1]
[ext_resource path="res://popups.tscn" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://resources/theme.tres" type="Theme" id=4]

[node name="MainControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -190.0
margin_right = 120.0
margin_bottom = 190.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="VBoxContainer"]
margin_right = 240.0
margin_bottom = 80.0
rect_min_size = Vector2( 240, 80 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Achievements" type="Button" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 240.0
margin_bottom = 180.0
rect_min_size = Vector2( 240, 80 )
text = "achievements"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_top = 200.0
margin_right = 240.0
margin_bottom = 280.0
rect_min_size = Vector2( 240, 80 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 300.0
margin_right = 240.0
margin_bottom = 380.0
rect_min_size = Vector2( 240, 80 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popups" parent="." instance=ExtResource( 2 )]
visible = false

[node name="QuitPopup" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -166.0
margin_top = -62.0
margin_right = 166.0
margin_bottom = 62.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="QuitPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="QuitPopup/VBoxContainer"]
margin_right = 324.0
margin_bottom = 39.0
mouse_filter = 1
size_flags_vertical = 1
text = "Quit?"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="QuitPopup/VBoxContainer"]
margin_top = 59.0
margin_right = 324.0
margin_bottom = 139.0
alignment = 1

[node name="Cancel" type="Button" parent="QuitPopup/VBoxContainer/HBoxContainer"]
margin_right = 160.0
margin_bottom = 80.0
rect_min_size = Vector2( 160, 80 )
mouse_filter = 1
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Cancel"

[node name="Confirm" type="Button" parent="QuitPopup/VBoxContainer/HBoxContainer"]
margin_left = 164.0
margin_right = 324.0
margin_bottom = 80.0
rect_min_size = Vector2( 160, 80 )
mouse_filter = 1
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Quit"

[node name="AchievemntsPopup" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -266.0
margin_right = 280.0
margin_bottom = 266.0
rect_min_size = Vector2( 560, 0 )
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="AchievemntsPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/separation = 10

[node name="Title" type="Label" parent="AchievemntsPopup/VBoxContainer"]
margin_right = 552.0
margin_bottom = 39.0
mouse_filter = 1
size_flags_vertical = 1
text = "Achievements"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="AchievemntsPopup/VBoxContainer"]
margin_top = 49.0
margin_right = 552.0
margin_bottom = 459.0
custom_constants/separation = 10

[node name="PanelContainer" type="PanelContainer" parent="AchievemntsPopup/VBoxContainer/VBoxContainer"]
margin_right = 552.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="AchievemntsPopup/VBoxContainer/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 545.0
margin_bottom = 73.0
custom_constants/separation = 20
alignment = 1

[node name="TextureRect" type="TextureRect" parent="AchievemntsPopup/VBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
margin_top = 23.0
margin_right = 20.0
margin_bottom = 43.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 4
size_flags_vertical = 4
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="AchievemntsPopup/VBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 40.0
margin_right = 538.0
margin_bottom = 66.0
rect_min_size = Vector2( 0, 20 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 1
text = "15 - 75%"
align = 1
valign = 1

[node name="GridContainer" type="GridContainer" parent="AchievemntsPopup/VBoxContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 552.0
margin_bottom = 410.0
rect_min_size = Vector2( 480, 320 )
size_flags_vertical = 4
columns = 3

[node name="TextureRect" type="TextureRect" parent="AchievemntsPopup/VBoxContainer/VBoxContainer/GridContainer"]
margin_left = 58.0
margin_top = 47.0
margin_right = 122.0
margin_bottom = 111.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="AchievemntsPopup/VBoxContainer/VBoxContainer/GridContainer"]
margin_left = 243.0
margin_top = 47.0
margin_right = 307.0
margin_bottom = 111.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 3 )

[node name="TextureRect3" type="TextureRect" parent="AchievemntsPopup/VBoxContainer/VBoxContainer/GridContainer"]
margin_left = 428.0
margin_top = 47.0
margin_right = 492.0
margin_bottom = 111.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 3 )

[node name="TextureRect4" type="TextureRect" parent="AchievemntsPopup/VBoxContainer/VBoxContainer/GridContainer"]
margin_left = 58.0
margin_top = 209.0
margin_right = 122.0
margin_bottom = 273.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 3 )

[node name="TextureRect5" type="TextureRect" parent="AchievemntsPopup/VBoxContainer/VBoxContainer/GridContainer"]
margin_left = 243.0
margin_top = 209.0
margin_right = 307.0
margin_bottom = 273.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 3 )

[node name="TextureRect6" type="TextureRect" parent="AchievemntsPopup/VBoxContainer/VBoxContainer/GridContainer"]
self_modulate = Color( 0, 1, 0.929412, 0.164706 )
margin_left = 428.0
margin_top = 209.0
margin_right = 492.0
margin_bottom = 273.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="AchievemntsPopup/VBoxContainer/VBoxContainer/GridContainer/TextureRect6"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
text = "All"
align = 1
valign = 1

[node name="OK" type="Button" parent="AchievemntsPopup/VBoxContainer"]
margin_left = 196.0
margin_top = 469.0
margin_right = 356.0
margin_bottom = 549.0
rect_min_size = Vector2( 160, 80 )
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 4
enabled_focus_mode = 0
text = "OK"

[node name="Level" type="Label" parent="."]
margin_right = 200.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 80 )
rect_scale = Vector2( 2, 2 )
text = "Level 1"
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/Achievements" to="." method="_on_Achievements_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="QuitPopup/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="QuitPopup/VBoxContainer/HBoxContainer/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="about_to_show" from="AchievemntsPopup" to="." method="_on_Ach_about_to_show"]
[connection signal="pressed" from="AchievemntsPopup/VBoxContainer/OK" to="." method="_on_Ach_OK_pressed"]
